package ex5_oop;

/**
 * Created by igor on 24.05.15.
 */
public class Animal {
    String name;
    int age;

    void about() {
        System.out.printf("name: %s, age: %d\n", name, age);
    }
}
