package ex5_oop;

/**
 * Created by igor on 24.05.15.
 */
public class Crocodile extends Animal {
    @Override
    void about() {
        System.out.println("Крокодил я, чего еще вам надо");
    }
}
