package ex5_oop;

/**
 * Created by igor on 24.05.15.
 */
public class Feline extends Animal {
    String eye;
}
